FIX: Update README, fix mvn test(unname module) error on M1